konst/tests/misc_tests/destructure_ui_tests/omit_field_braced_struct_err.stderr
error: `..` patterns are not supported in top-level struct patterns
  --> tests/misc_tests/destructure_ui_tests/omit_field_braced_struct_err.rs:14:5
   |
14 |     konst::destructure!{Braced{bar, ..}: Braced = foo}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__destructure_struct` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `bar` in this scope
  --> tests/misc_tests/destructure_ui_tests/omit_field_braced_struct_err.rs:15:5
   |
15 |     bar
   |     ^^^ not found in this scope

error: pattern requires `..` due to inaccessible fields
 --> tests/misc_tests/destructure_ui_tests/omit_field_braced_struct_err.rs:9:5
  |
9 |     konst::destructure!{Braced{bar} = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)
help: ignore the inaccessible and unused fields
 --> src/macros/destructuring.rs
  |
  |         let val @ $($struct_path)* {$($field: _, ..),*} $(: $struct_ty)? = $val;
  |                                                ++++
